...
    app:layout_constraintStart_toStartOf="parent" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/spinner_base"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="choose base currency"
            style="@style/spinner_style"
            android:layout_weight="3"
            android:layout_gravity="center_vertical" />
...
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        app:layout_constraintGuide_percent="0.15" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/currencies_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="@integer/num_col_recycler"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
...
